--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,10 +95,9 @@ jobs:
       - name: Build
         run: pnpm -r build
 
-      - name: Seed app_user
+      - name: Seed pg users
         run: |
           pgpm admin-users bootstrap --yes
-          pgpm admin-users add --test --yes
 
       - name: Test ${{ matrix.package }}
         run: cd ./packages/${{ matrix.package }} && pnpm test
