--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -68,10 +68,9 @@ jobs:
       - name: Build
         run: pnpm -r build
 
-      - name: Seed app_user
+      - name: Seed pg users
         run: |
           pgpm admin-users bootstrap --yes
-          pgpm admin-users add --test --yes
 
       - name: Run Integration Tests
         run: ./scripts/test-all-packages.js
